Resolve links not showing up in the href.  Even though mongodb field not configured as unique, duplicate records are not allowed.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,8 @@
 .brand-logo {
 	color: black;
 }
+
+.notes {
+	margin-right: 50%;
+}
+
